Sync IO looms